--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-DB_USER=digitalService 
-DB_PASS=1234zxcv
-DB_NAME=homeRenovation
+
+MONGO_URL = mongodb+srv://digitalService:design@cluster0.oqra4.mongodb.net/digitalDesignService?retryWrites=true&w=majority
