--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 
 MONGO_URL = mongodb+srv://digitalService:design@cluster0.oqra4.mongodb.net/digitalDesignService?retryWrites=true&w=majority
+
+username = hannan
